# EnglishChater

./: .gitignore  README.md  build.sh  manage.py  pyproject.toml  render.yaml  requirements.txt
catalog/: urls.py  views.py
data/: cjkl1317-07f0da05283b.json
englishchater/: asgi.py  settings.py  urls.py  wsgi.py
