[tool.poetry]
name = "englishchater"
version = "0.1.0"
description = ""
authors = ["jie.cao <cjkl1317@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.2.18"
gunicorn = "^20.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
