[tool.poetry]
name = "englishchater"
version = "0.1.0"
description = ""
authors = ["jie.cao <cjkl1317@163.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.7.10"
django = "^3.2.18"
gunicorn = "^20.1.0"
google-cloud-speech = "^2.18.0"
google-cloud-texttospeech = "^2.14.1"
google-auth = "^2.16.2"
openai = "^0.27.1"
djangorestframework-jsonapi = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
